Update a reverb version back to support JRE 1.8 (JDK 8)